<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">WifiExporter</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="label_export_wiglewifi_db">Export WigleWifi DB</string>
    <string name="filler_time">Apr 4 8:45 PM</string>
    <string name="label_level">Level:</string>
    <string name="filler_level">-76 dBm</string>
    <string name="label_altitude">Altitude:</string>
    <string name="filler_altitude">124 m</string>
    <string name="label_accuracy">Accuracy:</string>
    <string name="filler_accuracy">12</string>
    <string name="filler_count">N/A</string>
    <string name="label_locations">Locations:</string>
    <string name="label_networks">Networks</string>
    <string name="filler_ssid">mySSID</string>
    <string name="filler_bssid">44:11:33:ff:cc:ee</string>
    <string name="label_capabilities">Capabilities:</string>
    <string name="filler_capabilities">[WPA2][WPA-PSK-TKIP][ESS]</string>
    <string name="label_frequency">Frequency:</string>
    <string name="filler_frequency">2013 MHz</string>
    <string name="label_last_timestamp">Last Timestamp:</string>
    <string name="label_location_count">Location Count:</string>
    <string name="label_avg_level">Avg Level:</string>
    <string name="label_network_security">Network Security</string>
    <string name="label_upload_results">Upload Results</string>
    <string name="service_uri">http://172.16.100.6:6543/upload</string>
    <string name="maps_api_key">AIzaSyAshguDNP9Y7roRLzeLHmr6Ih1SWqCMIKM</string>
    <string name="title_network_map">Network Map</string>
    <string name="label_clear_markers">Clear Markers</string>
    <string name="label_add_markers">Add Network Markers</string>
    <string name="label_toggle_map">Toggle Map</string>
    <string name="title_network_list">Networks</string>
    <string name="title_network_detail">Network Detail</string>
    <string name="label_last_seen">Last Seen:</string>
    <string name="menu_settings">Settings</string>
    <string name="menu_exit">Exit</string>
    <string name="menu_parse_db">Parse database</string>
    <string name="menu_network_map">Network Map</string>
    <string name="menu_upload">Upload Database</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="menu_toggle_map">Toggle Map</string>
    <string name="label_signal_icon">Signal Strength Indicator</string>

</resources>