<menu xmlns:android="http://schemas.android.com/apk/res/android" >

    <item
        android:id="@+id/menu_parse_db"
        android:showAsAction="ifRoom"
        android:title="@string/menu_parse_db"
        android:icon="@android:drawable/ic_menu_rotate"/>
    
    <item
        android:id="@+id/menu_toggle_map"
        android:showAsAction="ifRoom"
        android:title="@string/menu_toggle_map"
        android:icon="@android:drawable/ic_menu_mapmode"/>
    
    <item
        android:id="@+id/menu_upload"
        android:showAsAction="ifRoom"
        android:title="@string/menu_upload"
        android:icon="@android:drawable/ic_menu_upload"/>
    
    <item
        android:id="@+id/menu_network_map"
        android:showAsAction="never"
        android:title="@string/menu_network_map"/>
    
    <item
        android:id="@+id/menu_settings"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/menu_settings"/>

    <item
        android:id="@+id/menu_exit"
        android:showAsAction="never"
        android:title="@string/menu_exit"/>
        
</menu>