<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal" >

    <ImageView
        android:id="@+id/image_location_signal_icon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/label_signal_icon"
        android:src="@drawable/ic_green_wifi" />

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_weight="0.10"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/text_location_bssid"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/filler_bssid"
            android:textAppearance="@style/Text.Medium.Alt" />

        <TextView
            android:id="@+id/text_location_level"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15dp"
            android:text="@string/filler_level"
            android:textAppearance="@style/Text.Medium"
            android:textStyle="italic" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="0.10"
        android:orientation="vertical" >
        
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="5dp"
                android:text="@string/label_altitude"
                android:textAppearance="@style/Text.Medium.Label" />

            <TextView
                android:id="@+id/text_location_altitude"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="right"
                android:text="@string/filler_altitude"
                android:textAppearance="@style/Text.Medium" />
        </LinearLayout>
        
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="5dp"
                android:text="@string/label_accuracy"
                android:textAppearance="@style/Text.Medium.Label" />

            <TextView
                android:id="@+id/text_location_accuracy"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="right"
                android:text="@string/filler_accuracy"
                android:textAppearance="@style/Text.Medium" />
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="5dp"
            android:text="@string/label_last_seen"
            android:textAppearance="@style/Text.Medium.Label" />

        <TextView
            android:id="@+id/text_location_time"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="right"
            android:text="@string/filler_time"
            android:textAppearance="@style/Text.Medium" />
    </LinearLayout>

</LinearLayout>