<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="horizontal" >

    <ImageView
        android:id="@+id/network_security"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:adjustViewBounds="true"
        android:contentDescription="@string/label_network_security"
        android:src="@drawable/ic_green_wifi" />

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_weight="0.10"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/network_ssid"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/filler_ssid"
            android:textAppearance="@style/Text.Medium.Alt" />

        <TextView
            android:id="@+id/network_bssid"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15dp"
            android:text="@string/filler_bssid"
            android:textAppearance="@style/Text.Medium"
            android:textStyle="italic" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="0.10"
        android:orientation="vertical" >

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="5dp"
                android:text="@string/label_last_seen"
                android:textAppearance="@style/Text.Medium.Label" />

            <TextView
                android:id="@+id/network_lasttime"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="right"
                android:text="@string/filler_time"
                android:textAppearance="@style/Text.Medium" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="5dp"
                android:text="@string/label_avg_level"
                android:textAppearance="@style/Text.Medium.Label" />

            <TextView
                android:id="@+id/network_avglevel"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="right"
                android:text="@string/filler_level"
                android:textAppearance="@style/Text.Medium" />

        </LinearLayout>
    </LinearLayout>

</LinearLayout>